sign in tests added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PolyCrowd</string>
     <string name="sign_in">Sign in</string>
-    <string name="username">email</string>
+    <string name="email">email</string>
     <string name="password">password</string>
 </resources>
