--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="repeat_password_hint">confirm the password</string>>
     <string name="sign_in">Sign in</string>
     <string name="email">email</string>
+    <string name="date_format">dd-MM-yyyy</string>>
 </resources>
