--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="repeat_password_hint">confirm the password</string>>
     <string name="sign_in">Sign in</string>
     <string name="email">email</string>
-    <string name="date_format">dd-MM-yyyy</string>>
+    <string name="date_format">dd-MM-yyyy</string>
+    <string name="event_details">Event Details</string>
 </resources>
