--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="email">email</string>
     <string name="date_format">dd-MM-yyyy</string>
     <string name="event_details">Event Details</string>
+    <string name="forgot_password">forgot password</string>
 </resources>
