--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="date_format">dd-MM-yyyy</string>
     <string name="event_details">Event Details</string>
     <string name="forgot_password">forgot password</string>
+    <string name="reset_password">Reset password</string>
+    <string name="send_reset_link">Send reset link</string>
 </resources>
