--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
         <item value="CONVENTION">Convention</item>
         <item value="OTHER">Other</item>
     </string-array>
+    <string name="event_details">Event Details</string>
     <string name="event_date_start">Start Date</string>
     <string name="event_date_end">End Date</string>
     <string name="event_add">Add Event</string>
@@ -28,7 +29,6 @@
     <string name="sign_in">Sign in</string>
     <string name="email">email</string>
     <string name="date_format">dd-MM-yyyy</string>
-    <string name="event_details">Event Details</string>
     <string name="forgot_password">forgot password</string>
     <string name="reset_password">Reset password</string>
     <string name="send_reset_link">Send reset link</string>
@@ -40,4 +40,12 @@
     <string name="organizer_invite_text">Log in to view the invite</string>
     <string name="organizer_invite_text_1">"You are invited to become an organizer of the event</string>
     <string name="organizer_invite_text_2">Sign in to accept the invitation</string>
+    <string name="sos_main">Emergency</string>
+    <string name="sos_type">What is the reason for the emergency ??</string>
+    <string-array name="sos_type_list">
+        <item value="LOSTMINOR">Lost Minor</item>
+        <item value="ACCIDENT">Accident</item>
+        <item value="DRUNK">Drunk</item>
+        <item value="OTHER">Other</item>
+    </string-array>
 </resources>
