--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="sos_main">Emergency</string>
     <string name="edit_main">Edit</string>
     <string name="sos_type">What is the reason for the emergency ??</string>
+    <string name="invite_security">Invite Security</string>
+    <string name="security">Security</string>
     <string-array name="sos_type_list">
         <item value="LOSTMINOR">Lost Minor</item>
         <item value="ACCIDENT">Accident</item>
